# interflop-backend-vprec

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac  install-stdlib.sh  interflop_vprec.c  interflop_vprec.h  interflop_vprec_function_instrumentation.c  interflop_vprec_function_instrumentation.h
common/: Makefile.am  interflop.h  interflop_stdlib.c  interflop_stdlib.h  logger.c  logger.h  vfc_hashmap.c  vfc_hashmap.h  vprec_tools.c
common/rng/: Makefile.am  splitmix64.h  vfc_rng.c  vfc_rng.h  xoroshiro128.h
